# ros-vrep-slam

./: README.md  curses  draw.launch  hector.launch  hk.rviz  math  rospy
devel/: .catkin  .rosinstall  setup.sh
devel/include/detection_msgs/: Detection.h
devel/include/ferns_detector/: DetectedPoint.h  Detection.h  ModelStatus.h
devel/lib/detection_msgs/: overlay_visualizer  patch_visualizer
devel/lib/dlib_detector/: face_detector  object_detector  object_detector_trainer
devel/lib/ferns_detector/: detector  tester  trainer
devel/lib/pkgconfig/: detection_msgs.pc  dlib_detector.pc  ferns_detector.pc  opencv_detector.pc  project.pc  visual_servo.pc  vrep_ros_interface.pc
devel/lib/python2.7/dist-packages/detection_msgs/msg/: _Detection.py  __init__.py
devel/lib/python2.7/dist-packages/ferns_detector/msg/: _DetectedPoint.py  _Detection.py  _ModelStatus.py  __init__.py
devel/lib/python2.7/dist-packages/opencv_detector/: __init__.py
devel/share/common-lisp/ros/detection_msgs/msg/: Detection.lisp  _package.lisp  _package_Detection.lisp  detection_msgs-msg.asd
devel/share/common-lisp/ros/ferns_detector/msg/: DetectedPoint.lisp  Detection.lisp  ModelStatus.lisp  _package.lisp  _package_DetectedPoint.lisp  _package_Detection.lisp  _package_ModelStatus.lisp  ferns_detector-msg.asd
devel/share/detection_msgs/cmake/: detection_msgs-msg-extras.cmake  detection_msgs-msg-paths.cmake  detection_msgsConfig.cmake
devel/share/dlib_detector/cmake/: dlib_detectorConfig.cmake
devel/share/ferns_detector/cmake/: ferns_detector-msg-paths.cmake  ferns_detectorConfig.cmake
devel/share/gennodejs/ros/detection_msgs/msg/: Detection.js  _index.js
devel/share/gennodejs/ros/ferns_detector/msg/: DetectedPoint.js  Detection.js  ModelStatus.js  _index.js
devel/share/opencv_detector/cmake/: opencv_detectorConfig.cmake
devel/share/project/cmake/: projectConfig.cmake
devel/share/roseus/ros/detection_msgs/: manifest.l
devel/share/roseus/ros/detection_msgs/msg/: Detection.l
devel/share/roseus/ros/ferns_detector/: manifest.l
devel/share/roseus/ros/ferns_detector/msg/: DetectedPoint.l  Detection.l  ModelStatus.l
devel/share/visual_servo/cmake/: visual_servoConfig.cmake
devel/share/vrep_ros_interface/cmake/: vrep_ros_interfaceConfig-version.cmake  vrep_ros_interfaceConfig.cmake
src/detection_msgs/: CMakeLists.txt  package.xml
src/detection_msgs/msg/: Detection.msg
src/detection_msgs/src/: overlay_visualizer.cpp  patch_visualizer.cpp
src/dlib_detector/: CMakeLists.txt
src/dlib_detector/launch/: dlib_detector.launch  face_detector.launch  face_detector_camera.launch  face_detector_kinect.launch  face_detector_mapper.launch  traffic_sign_detector_camera.launch
src/dlib_detector/src/: face_detector.cpp  object_detector.cpp  object_detector_trainer.cpp
src/ferns_detector/: CMakeLists.txt  package.xml
src/ferns_detector/launch/: detector.launch  multi_detector.launch
src/ferns_detector/msg/: DetectedPoint.msg  Detection.msg  ModelStatus.msg
src/ferns_detector/src/: detector.cpp  tester.cpp  trainer.cpp
src/ferns_detector/src/ferns/: AUTHORS  README  affine_image_generator06.cc  affine_image_generator06.h  affine_transformation_range.cc  affine_transformation_range.h  buffer_management.cc  buffer_management.h  cmphomo.cc  cmphomo.h  fern_based_point_classifier.cc  fern_based_point_classifier.h  ferns.cc  ferns.h  fine_gaussian_pyramid.cc  fine_gaussian_pyramid.h  general.h  homography06.cc  homography06.h  homography_estimator.cc  homography_estimator.h  keypoint.h  mcv.cc  mcv.h  mcvGaussianSmoothing.cc  mcvGaussianSmoothing.h  planar_pattern_detector.cc  planar_pattern_detector.h  planar_pattern_detector_builder.cc  planar_pattern_detector_builder.h  pyr_yape06.cc  pyr_yape06.h  template_matching_based_tracker.cc  template_matching_based_tracker.h
src/opencv_detector/: CMakeLists.txt  package.xml
src/opencv_detector/launch/: facedetector.launch  facedetector_camera.launch  facedetector_kinect.launch  facedetector_mapper.launch
src/opencv_detector/msg/: Detection.msg
src/opencv_detector/src/: detector
src/project/: CMakeLists.txt  package.xml
src/project/src/: explore.py  key_teleop.py  keyboard_listener.py
src/v_repExtRosInterface/: CMakeLists.txt  README.txt  install.sh  mainpage.dox  package.xml
src/v_repExtRosInterface/extra/: ros_vrep_rosinterface_install.sh
src/v_repExtRosInterface/include/: ros_msg_builtin_io.h  stubs.h  vrep_ros_interface.h
src/v_repExtRosInterface/meta/: callbacks.xml  callbacks.xsl  messages.txt  services.txt
src/v_repExtRosInterface/src/: ros_msg_builtin_io.cpp  stubs.cpp  v_repLib_inc.cpp  vrep_ros_interface.cpp
src/v_repExtRosInterface/tools/: generate_ros_stuff.py
src/v_repExtRosInterface/v_repStubsGen/: .gitignore  .gitmodules  README.md  generate.py  generate_deprecated_txt.py  generate_lua_calltips.py  generate_notepadplusplus_txt.py  generate_notepadplusplus_xml.py  lua_to_xml.py  merge_xml.py  parse.py
src/v_repExtRosInterface/v_repStubsGen/cpp/: stubs.cpp  stubs.h
src/v_repExtRosInterface/v_repStubsGen/model/: __init__.py  command.py  enum.py  param.py  plugin.py  script_function.py  struct.py
src/v_repExtRosInterface/v_repStubsGen/xsl/: reference.xsl
src/visual_servo/: CMakeLists.txt
src/visual_servo/src/: visual_servo.py
